--- a/Dockerfile_cpu
+++ b/Dockerfile_cpu
@@ -20,7 +20,7 @@ RUN pip install \
     numpy==1.26.4 \
     scipy==1.16.0 \
     seaborn==0.13.2 \
-    matplotlib==3.10.3 \
+    matplotlib==3.10.3
 
 COPY . /app/quarc
 WORKDIR /app/quarc
