update trainer and dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -163,9 +163,11 @@ __pycache__/
 .cursor/
 temp/
 logs/
+checkpoints/
+condrec/
+retrained_models/
 
 # Pistachio related files
 densities_clean_new.tsv
 Pistachio Reaction Types.csv
-
 CLAUDE.md
