--- a/configs/preprocess_config.yaml
+++ b/configs/preprocess_config.yaml
@@ -1,28 +1,28 @@
 dirs:
-  raw_dir: &raw_dir "/path/to/pistachio/2023Q2/extract" # Raw JSON files from Pistachio database
-  log_dir: &log_dir "/path/to/quarc/logs/preprocessing" # Preprocessing logs and debug information
+  raw_dir: &raw_dir "${RAW_DIR}" # Raw JSON files from Pistachio database
+  log_dir: &log_dir "${LOG_DIR}" # Preprocessing logs and debug information
 
   # Intermediate data directories
-  dump_dir: &dump_dir "/path/to/quarc/data/interim/23Q2_dump" # Initial chunks from raw JSON, one reaction dictionary per line
-  grouped_dir: &grouped_dir "/path/to/quarc/data/interim/23Q2_grouped" # Regrouped larger chunks for efficient processing
-  temp_dedup_dir: &temp_dedup_dir "/path/to/quarc/data/interim/temp_dedup" # Temporary storage for locally deduplicated chunks
-  split_dir: &split_dir "/path/to/quarc/data/interim/split" # Train/val/test splits by document ID (full_train.pickle, full_val.pickle, full_test.pickle)
+  dump_dir: &dump_dir "${DUMP_DIR}" # Initial chunks from raw JSON, one reaction dictionary per line
+  grouped_dir: &grouped_dir "${GROUPED_DIR}" # Regrouped larger chunks for efficient processing
+  temp_dedup_dir: &temp_dedup_dir "${TEMP_DEDUP_DIR}" # Temporary storage for locally deduplicated chunks
+  split_dir: &split_dir "${SPLIT_DIR}" # Train/val/test splits by document ID (full_train.pickle, full_val.pickle, full_test.pickle)
 
   # Key intermediate files
-  final_dedup_path: &final_dedup_path "/path/to/quarc/data/interim/23Q2_final_deduped.pickle" # Globally deduplicated reactions
-  final_dedup_filtered_path: &final_dedup_filtered_path "/path/to/quarc/data/interim/23Q2_final_deduped_filtered.pickle" # After initial filtering (length, atom count, etc.)
-  final_dedup_filtered_path_with_uncat: &final_dedup_filtered_path_with_uncat "/path/to/quarc/data/interim/23Q2_final_deduped_filtered_with_uncat.pickle" # including uncat reactions
+  final_dedup_path: &final_dedup_path "${FINAL_DEDUP_PATH}" # Globally deduplicated reactions
+  final_dedup_filtered_path: &final_dedup_filtered_path "${FINAL_DEDUP_FILTERED_PATH}" # After initial filtering (length, atom count, etc.)
+  final_dedup_filtered_path_with_uncat: &final_dedup_filtered_path_with_uncat "${FINAL_DEDUP_FILTERED_WITH_UNCAT_PATH}" # including uncat reactions
 
   # Processed data directories and files
-  agent_encoder_list_path: &agent_encoder_list_path "/path/to/quarc/data/processed/agent_encoder/agent_encoder_list.json" # Agent vocabulary list
-  agent_other_dict_path: &agent_other_dict_path "/path/to/quarc/data/processed/agent_encoder/agent_other_dict.json" # Rare agent mappings (e.g., other_Pd)
-  conv_rules_path: &conv_rules_path "/path/to/quarc/data/processed/agent_encoder/agent_rules_v1.json" # Agent standardization rules
+  agent_encoder_list_path: &agent_encoder_list_path "${AGENT_ENCODER_LIST_PATH}" # Agent vocabulary list
+  agent_other_dict_path: &agent_other_dict_path "${AGENT_OTHER_DICT_PATH}" # Rare agent mappings (e.g., other_Pd)
+  conv_rules_path: &conv_rules_path "${CONV_RULES_PATH}" # Agent standardization rules
 
   # Stage-specific filtered data
-  stage1_dir: &stage1_dir "/path/to/quarc/data/processed/stage1" # Agent data
-  stage2_dir: &stage2_dir "/path/to/quarc/data/processed/stage2" # Temperature data
-  stage3_dir: &stage3_dir "/path/to/quarc/data/processed/stage3" # Reactant amount data
-  stage4_dir: &stage4_dir "/path/to/quarc/data/processed/stage4" # Agent amount data
+  stage1_dir: &stage1_dir "${STAGE1_DIR}" # Agent data
+  stage2_dir: &stage2_dir "${STAGE2_DIR}" # Temperature data
+  stage3_dir: &stage3_dir "${STAGE3_DIR}" # Reactant amount data
+  stage4_dir: &stage4_dir "${STAGE4_DIR}" # Agent amount data
 
 logging:
   log_dir: *log_dir
@@ -37,28 +37,8 @@ logging:
 chunking:
   raw_input_dir: *raw_dir
   initial_chunks_dir: *dump_dir
-  grouped_chunks_dir: *grouped_dir
-  num_workers: 8
-  chunk_size: 500000
-  group_batch_size: 10
-
-data_collection:
-  input_dir: *grouped_dir
-  temp_dedup_dir: *temp_dedup_dir
-  output_path: *final_dedup_path
-
-generate_agent_class:
-  input_path: *final_dedup_path
-  output_encoder_path: *agent_encoder_list_path # agent vocab
-  output_other_dict_path: *agent_other_dict_path # other_{Pd/Rh/...}
-  conv_rules_path: *conv_rules_path
-  minocc: 50
-  metal_minocc: 50
-
-initial_filter:
-  input_path: *final_dedup_path
-  # output_path: *final_dedup_filtered_path
-  output_path: *final_dedup_filtered_path_with_uncat # temporary get uncat reactions in
+  grouped_chunks_dir: *grouped_dir=
+  output_path: *final_dedup_filtered_path
   length_filters:
     product:
       min: 1
