--- a/.dockerignore
+++ b/.dockerignore
@@ -26,7 +26,9 @@ logs/
 temp/
 
 # Data directories
-# data/
+data/
+!data/processed/agent_encoder
+!data/external/densities.tsv
 condrec/
 
 # Python cache and artifacts
@@ -46,3 +48,5 @@ __pycache__/
 
 # Other files
 *.sif
+*.pkl
+*.pickle
