--- a/Dockerfile_gpu
+++ b/Dockerfile_gpu
@@ -1,26 +1,37 @@
-FROM mambaorg/micromamba:1.4.7-bionic-cuda-11.3.1
+# FROM mambaorg/micromamba:1.4.7-bionic-cuda-11.3.1
+FROM mambaorg/micromamba:1.5.8-jammy-cuda-12.1.1
 
 USER root
-# Keep the base environment activated
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
+
 RUN apt update && apt -y install git gcc g++ make
 
-RUN micromamba install -y python=3.11.2 pip=25.1.1 rdkit=2023.09.5 pandas=2.3.1 -c conda-forge
-RUN micromamba install -y pytorch==2.1.0 pytorch-lightning==2.5.0 -c pytorch -c conda-forge
+RUN micromamba install -y \
+    python=3.11.2 \
+    pip=25.1.1 \
+    rdkit=2023.09.5 \
+    pandas=2.3.1 \
+    pytorch=2.1.0 \
+    pytorch-cuda=12.1 \
+    pytorch-lightning=2.1.4 \
+    -c pytorch -c nvidia -c conda-forge
+
 RUN pip install \
-    fastapi==0.88.0 \
-    uvicorn==0.35.0 \
-    pydantic==1.10.22 \
-    requests==2.32.4 \
-    loguru==0.7.3 \
-    tqdm==4.67.1 \
-    numpy==1.26.4 \
-    chemprop==2.0.0 \
-    tensorboard==2.18.0
+fastapi==0.88.0 \
+uvicorn==0.35.0 \
+pydantic==1.10.22 \
+requests==2.32.4 \
+loguru==0.7.3 \
+tqdm==4.67.1 \
+numpy==1.26.4 \
+tensorboard==2.18.0 \
+torcheval==0.0.7 \
+chemprop==2.0.0
 
 COPY . /app/quarc
 WORKDIR /app/quarc
 
 RUN pip install --no-deps -e .
+
 
 EXPOSE 9910 9911
